[package]
name = "mdnya-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mdnya"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
tree-sitter = "0.20.9"
tree-sitter-highlight = "0.20.1"
regex = "1"
lazy_static = "1.4.0"
html-escape = "0.2.11"

mdnya = { path = "../mdnya" }

[build-dependencies]
cc = "*"