[package]
name = "mdnya-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mdnya"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
lazy_static = "1.4.0"
html-escape = "0.2.11"
mdnya = { path = "../mdnya" }
serde_json = "^1.0"
justlogfox = { path = "../../justlogfox", features = ["colors"] }
