[package]
name = "mdnya-hl-rust"
version = "0.1.0"
edition = "2021"

[lib]
# crate-type = ["staticlib"]
crate-type = ["cdylib", "lib"]

[dependencies]
# tree-sitter = "0.20"
# tree-sitter-highlight = "0.20"
# bincode = "1.3"
# # hlconfig-pregen = { path = "../hlconfig-pregen" }
# mdnya-hl = { path = "../mdnya-hl" }
# mdnya-hl-rust-gen = { path = "../mdnya-hl-rust-gen" }


[build-dependencies]
cc = "1"
mdnya-hl-rust-gen = { path = "../mdnya-hl-rust-gen" }
bincode = "1.3"