[package]
name = "mdnya-hl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.20"
tree-sitter-highlight = "0.20"
serde = { version = "1", features = ["derive", "rc"] }
regex = "1"
bincode = "1"

libloading = { version = "0.7", optional = true }

[features]
default = ["dynamic", "generate"]
dynamic = ["libloading"]
generate = []