[package]
name = "mdnya"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = "0.20"
html-escape = "0.2"
phf = { version = "0.11", features = ["macros"] }
lazy_static = "1"
regex = "1"
mdnya-hl = { path = "../mdnya-hl" }

[build-dependencies]
cc = "1"

[dev-dependencies]
mdnya-hl = { path = "../mdnya-hl", features = ["dynamic"] }
mdnya-hl-rust = { path = "../mdnya-hl-langs/rust", features=["static"] }