[package]
name = "mdnya"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = "0.19"
html-escape = "0.2"
phf = { version = "0.11", features = ["macros"] }
lazy_static = "1"
regex = "1"
dirs = "5"
markdown = "1.0.0-alpha.7"
serde_yaml = "0.9"
maud = "0.24"

justlogfox = { path = "../../justlogfox", features = ["colors"] }

tree-sitter-markdown = "0.7.0"

[build-dependencies]
cc = "1"
