[package]
name = "mdnya"
version = "0.1.0"
edition = "2021"

[dependencies]
html-escape = "0.2"
lazy_static = "1"
regex = "1"
dirs = "5"
markdown = "1.0.0-alpha.7"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "^0.9"

justlogfox = { path = "../../justlogfox", features = ["colors"] }
