[package]
name = "mdnya-hl-bash"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
mdnya-hl = { path = "../../mdnya-hl" }
mdnya-hl-bash-gen = { path = "../bash-gen" }

[build-dependencies]
mdnya-hl-bash-gen = { path = "../bash-gen" }
bincode = "1.3"

[features]
default = ["static"]
dynamic = [ "mdnya-hl/dynamic" ]
static = []