[package]
name = "mdnya-hl-csharp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
tree-sitter = "0.20"
mdnya-hl = { path = "../../mdnya-hl" }
# mdnya-hl-csharp-gen = { path = "../csharp-gen" }

[build-dependencies]
cc = "1"

[features]
default = ["static"]
dynamic = [ "mdnya-hl/dynamic" ]
static = []