[package]
name = "mdnya-hl-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
mdnya-hl = { path = "../../mdnya-hl" }
mdnya-hl-rust-gen = { path = "../rust-gen" }

[build-dependencies]
mdnya-hl-rust-gen = { path = "../rust-gen" }
bincode = "1.3"

[features]
default = ["static"]
dynamic = [ "mdnya-hl/dynamic" ]
static = []